created the component

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <img src="./images/pattern-background-desktop.svg" alt="bg-image" class="bg-img">
+        <div class="component-container">
+            <div class="component">
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
