--- a/index.html
+++ b/index.html
@@ -16,7 +16,26 @@
         <img src="./images/pattern-background-desktop.svg" alt="bg-image" class="bg-img">
         <div class="component-container">
             <div class="component">
-
+                <img src="./images/illustration-hero.svg" alt="" class="component-img">
+                <div class="component-content-wrap">
+                    <h2 class="title">Order Summary</h2>
+                    <p class="subtitle">You can now listen to millions of songs, 
+                        audiobooks, and podcasts on any device 
+                        anywhere you like!
+                    </p>
+                    <div class="plan-wrap">
+                        <img src="./images/icon-music.svg" alt="music-icon" class="music-svg">
+                        <div class="spacebetween">
+                            <div class="txt-plan-wrap">
+                                <p>Annual plan</p>
+                                <p>$59.99/year</p>
+                            </div>
+                            <p>Change</p>
+                        </div>
+                    </div>
+                    <input type="button" value="Proceed to Payment" class="button">
+                    <p class="cancel">Cancel Order</p>
+                </div>
             </div>
         </div>
     </div>
